--- a/src/apps_common/paginator/templates/paginator/paginator.html
+++ b/src/apps_common/paginator/templates/paginator/paginator.html
@@ -2,10 +2,10 @@
 {% load paginator %}
 
 <div class="navigation" itemscope itemtype="https://schema.org/SiteNavigationElement">
-  {% if page.has_previous %}
-    <a href="{% href paginator page.previous_page_number %}"
+  {% if paginator.previous_page_number %}
+    <a href="{% href paginator paginator.previous_page_number %}"
        class="nav-item prev-page"
-       data-page="{{ page.previous_page_number }}">{% trans 'Previous' %}</a>
+       data-page="{{ paginator.previous_page_number }}">{% trans 'Previous' %}</a>
   {% else %}
     <span class="nav-item prev-page disabled">{% trans 'Previous' %}</span>
   {% endif %}
@@ -14,20 +14,20 @@
     {% for page_num in paginator.zipped_page_range %}
       {% if page_num == None %}
         <span class="page zip-item">...</span>
-      {% elif page.number == page_num %}
+      {% elif current_page_number == page_num %}
         <span class="page active">{{ page_num }}</span>
       {% else %}
         <a href="{% href paginator page_num %}" itemprop="url"
-           class="page link {% if page.number == page_num %}active{% endif %}"
+           class="page link {% if current_page_number == page_num %}active{% endif %}"
            data-page="{{ page_num }}">{{ page_num }}</a>
       {% endif %}
     {% endfor %}
   </div>
 
-  {% if page.has_next %}
-    <a href="{% href paginator page.next_page_number %}"
+  {% if paginator.next_page_number %}
+    <a href="{% href paginator paginator.next_page_number %}"
        class="nav-item next-page"
-       data-page="{{ page.next_page_number }}">{% trans 'Next' %}</a>
+       data-page="{{ paginator.next_page_number }}">{% trans 'Next' %}</a>
   {% else %}
     <span class="nav-item next-page disabled">{% trans 'Next' %}</span>
   {% endif %}
