--- a/src/apps/users/templates/users/reset_complete.html
+++ b/src/apps/users/templates/users/reset_complete.html
@@ -3,6 +3,7 @@
 {% load i18n %}
 
 {% block extra_meta %}
+  {{ block.super() }}
   <meta http-equiv="refresh" content="5; url={{ redirect|default:"/" }}"/>
 {% endblock extra_meta %}
 
