--- a/src/apps_common/seo/templates/seo/metatags.html
+++ b/src/apps_common/seo/templates/seo/metatags.html
@@ -1,25 +1,29 @@
-<meta charset="utf-8">
-<meta name="keywords" content="{{ seo.keywords }}"/>
-<meta name="description" content="{{ seo.description }}"/>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+{% with seo=request.seo %}
+  <meta name="keywords" content="{{ seo.keywords }}"/>
+  <meta name="description" content="{{ seo.description }}"/>
 
-{% if seo.canonical %}
-  <link rel="canonical" href="{{ seo.canonical }}">
-{% endif %}
+  {% if seo.canonical %}
+    <link rel="canonical" href="{{ seo.canonical }}">
+  {% endif %}
 
-{% if seo.next %}
-  <link rel="next" href="{{ seo.next }}">
-{% endif %}
+  {% if seo.next %}
+    <link rel="next" href="{{ seo.next }}">
+  {% endif %}
 
-{% if seo.prev %}
-  <link rel="prev" href="{{ seo.prev }}">
-{% endif %}
+  {% if seo.prev %}
+    <link rel="prev" href="{{ seo.prev }}">
+  {% endif %}
 
+  {% if seo.noindex %}
+    <meta name="robots" content="noindex">
+  {% endif %}
 
-{% for key, value in seo.opengraph.data.items %}
-  <meta property="{{ key }}" content="{{ value }}">
-{% endfor %}
+  {% for key, value in seo.opengraph.data.items %}
+    <meta property="{{ key }}" content="{{ value }}">
+  {% endfor %}
 
-{% for key, value in seo.twitter_card.data.items %}
-  <meta name="twitter:{{ key }}" content="{{ value }}">
-{% endfor %}
+  {% for key, value in seo.twitter_card.data.items %}
+    <meta name="twitter:{{ key }}" content="{{ value }}">
+  {% endfor %}
+
+{% endwith %}
