--- a/src/apps/users/templates/users/reset_complete.html
+++ b/src/apps/users/templates/users/reset_complete.html
@@ -2,10 +2,10 @@
 
 {% load i18n %}
 
-{% block extra_meta %}
+{% block metatags %}
   {{ block.super() }}
   <meta http-equiv="refresh" content="5; url={{ redirect|default:"/" }}"/>
-{% endblock extra_meta %}
+{% endblock metatags %}
 
 
 {% block content %}
