--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -7,7 +7,7 @@
 
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" prefix="og: http://ogp.me/ns#" class="no-js"
-      lang="{{ LANGUAGE_CODE }}" google-apikey="{{ GOOGLE_APIKEY }}">
+      lang="{{ LANGUAGE_CODE }}" data-google-apikey="{{ GOOGLE_APIKEY }}">
 <head>
   <title>{% block title %}{{ request.seo.title }}{% endblock %}</title>
   <meta charset="utf-8">
