--- a/src/templates/admin/base_site.html
+++ b/src/templates/admin/base_site.html
@@ -7,7 +7,7 @@
 {% block extrastyle %}
   <script>
     var docElement = document.documentElement;
-    docElement.setAttribute('google-apikey', '{{ GOOGLE_APIKEY }}');
+    docElement.setAttribute('data-google-apikey', '{{ GOOGLE_APIKEY }}');
   </script>
   <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.png' %}"/>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,400italic,700,700italic" rel="stylesheet"
