--- a/src/apps_common/mailerlite/templates/mailerlite/layout.html
+++ b/src/apps_common/mailerlite/templates/mailerlite/layout.html
@@ -46,11 +46,7 @@
 
             <!-- Mailerlite logo -->
             {% block mailerlite %}
-              <table align="center" cellspacing="0" cellpadding="0" border="0" class="full-width">
-                <tr>
-                  <td height="30px"></td>
-                </tr>
-
+              <table align="center" class="full-width">
                 <tr>
                   <td align="center">
                     <a style="display: inline-block; margin: 0; border: none;" href="https://www.mailerlite.com">
