--- a/src/apps_common/mailerlite/static/mailerlite/scss/standart.scss
+++ b/src/apps_common/mailerlite/static/mailerlite/scss/standart.scss
@@ -4,54 +4,82 @@
 
 body[yahoo] {
   /* Шапка */
-  .header-table {
+  .header {
+    padding: 25px 0 18px;
+    @include media_interval(0, $media_mobile) {
+      padding: 20px 7.2% 18px !important;
+    }
+
     .logo {
       display: inline-block;
       width: 170px;
+      height: 52px;
+      @include media_interval(0, $media_mobile) {
+        width: 136px;
+        height: 42px;
+      }
     }
 
-    .backlink {
-      display: inline-block;
-      margin-top: 60px;
-      color: $gray;
-      font-size: 0.75em;
+    .backlink-cell {
+      width: 100px;
+      min-width: 100px;
+      text-align: right;
+      vertical-align: bottom;
+      @include font-size(12px, 18px);
+
+      a {
+        color: $gray;
+      }
     }
   }
 
-  .header-cell {
-    padding-top: 25px;
-    padding-bottom: 18px;
-  }
-
+  /* Контент */
   .content-cell {
-    padding: 30px 55px 46px;
+    padding: 30px 7.2% 46px;
     background-color: $white;
+    @include media_interval(0, $media_mobile) {
+      padding: 24px 7.2% 30px !important;
+    }
+
+    img {
+      display: inline-block;
+    }
   }
 
   /* Footer */
   .footer {
-    padding: 20px 0 30px;
+    padding: 12px 0 30px;
+    @include media_interval(0, $media_mobile) {
+      padding: 12px 7.2% 30px !important;
+    }
 
-    .left-table {
-      width: 530px;
+    .top-cell {
+      color: $gray;
+      @include font-size(12px, 18px);
 
-      .left-cell {
+      a {
         color: $gray;
-        @include font-size(11px, 18px);
-
-        a {
-          color: $gray;
-          @include font-size(11px, 18px);
-        }
+        @include font-size(12px, 18px);
       }
     }
 
-    .right-table {
-      width: 110px;
-    }
+    .bottom-table {
+      margin-top: 8px;
 
-    .bottom-cell {
-      @include font-size(12px, 18px);
+      .left-cell, .right-cell {
+        @include font-size(12px, 20px);
+      }
+
+      .right-cell {
+        width: 70px;
+        min-width: 70px;
+        text-align: right;
+        vertical-align: bottom;
+      }
+
+      .mailerlite {
+        color: $gray;
+      }
     }
   }
 }
