--- a/src/apps_common/mailerlite/templates/mailerlite/ajax_subscribe.html
+++ b/src/apps_common/mailerlite/templates/mailerlite/ajax_subscribe.html
@@ -4,7 +4,7 @@
 <p class="title title-h1">{% trans 'Subscribe' %}</p>
 
 {{ form.media }}
-<form method="post" action="{% url 'subscribe:ajax_subscribe' %}" id="ajax-subscribe-form" autocomplete="off">
+<form method="post" action="{% url 'mailerlite:ajax_subscribe' %}" id="ajax-subscribe-form" autocomplete="off">
   {% render_form form %}
 
   <div>
