--- a/src/static/scss/popups/popups.scss
+++ b/src/static/scss/popups/popups.scss
@@ -29,7 +29,7 @@ $background_color: $white;
 
 // кнопка закрытия
 $close_btn_size: 21px;
-$close_btn_color: #F2F2F2;
+$close_btn_color: #A0A0A0;
 $close_btn_weight: 3px;
 
 
