file downloads + ajax contacts

--- a/src/apps/contacts/templates/contacts/index.html
+++ b/src/apps/contacts/templates/contacts/index.html
@@ -21,7 +21,7 @@
   <div id="contacts" class="block grid-block">
     <div class="title-h1">{{ config.header }}</div>
 
-    <form method="post" action="" id="contact-form">
+    <form method="post" action="" id="ajax-contact-form">
       {% render_form form %}
 
       <div class="buttons">
