--- a/src/apps_common/mailerlite/templates/mailerlite/standart/plain_version.html
+++ b/src/apps_common/mailerlite/templates/mailerlite/standart/plain_version.html
@@ -1,6 +1,7 @@
 {% load i18n %}
+{% load text %}
 
-{{ campaign.text|striptags }}
+{{ campaign.text|striptags|unescape_html }}
 
 ---------------------------------------------------------------------------------
 
