--- a/src/apps_common/ckeditor/static/ckeditor/admin/css/ckeditor.css
+++ b/src/apps_common/ckeditor/static/ckeditor/admin/css/ckeditor.css
@@ -47,11 +47,32 @@ h1, h2, h3, h4 {
 }
 
 ul, ol {
-  padding-left: 18px;
+    padding-left: 0;
 }
 
 li {
-    padding: 3px 0;
+    position: relative;
+    padding: 3px 0 3px 16px;
+    z-index: 1;
+}
+
+ul {
+    list-style: none;
+}
+ul li:before {
+    content: '●';
+    position: absolute;
+    left: 0.2em;
+    top: 0.33em;
+    font-size: 0.8em;
+}
+
+/* fix styles combo */
+.cke_panel_list li {
+    padding: 0;
+}
+.cke_panel_list li:before {
+    content: none;
 }
 
 blockquote {
@@ -78,9 +99,9 @@ blockquote > *:last-child {
     -webkit-column-count: 2;
     -moz-column-count: 2;
     column-count: 2;
-    -webkit-column-gap: 36px;
-    -moz-column-gap: 36px;
-    column-gap: 36px;
+    -webkit-column-gap: 30px;
+    -moz-column-gap: 30px;
+    column-gap: 30px;
 }
 .two-columns > * {
     -webkit-column-break-inside: avoid;
