--- a/src/apps_common/gallery/templates/gallery/admin/gallery_items.html
+++ b/src/apps_common/gallery/templates/gallery/admin/gallery_items.html
@@ -64,6 +64,7 @@
     <div style="float: left">
       {% if gallery.IMAGE_MODEL %}
         <button class="btn btn-success add-gallery-image">
+          <i class="icon-folder-open icon-white"></i>
           {% trans 'Add image' %}
         </button>
       {% endif %}
