--- a/src/libs/stdimage/templates/stdimage/admin/widget.html
+++ b/src/libs/stdimage/templates/stdimage/admin/widget.html
@@ -21,7 +21,10 @@
   </div>
 
   <div class="button-wrapper">
-    <button type="button" class="btn btn-success">{% trans 'Select file' %}</button>
+    <button type="button" class="btn btn-success">
+      <i class="icon-folder-open icon-white"></i>
+      {% trans 'Select file' %}
+    </button>
     <span class="hint">{% trans 'Dimensions: ' %} {% trans 'from' %} {{ min_dimensions|join:'x' }} {% trans 'to' %} {{ max_dimensions|join:'x' }}</span>
   </div>
 
