--- a/src/libs/file_field/static/file_field/admin/css/file_widget.css
+++ b/src/libs/file_field/static/file_field/admin/css/file_widget.css
@@ -1,25 +1,56 @@
 .file-widget {
+    white-space: nowrap;
+}
+
+.file-widget label {
     display: inline-block;
     position: relative;
     overflow: hidden;
-    z-index: 1;
+    z-index: 2;
     cursor: pointer;
+    vertical-align: middle;
 }
 
 .file-widget input {
     position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    opacity: 0;
+    left: -100%;
+    z-index: -2;
     cursor: pointer;
     font-size: 0;
+    visibility: hidden;
 }
 
-.file-widget button i {
+.file-widget .btn i {
     margin-left: -4px;
     margin-right: 2px;
 }
 
+.file-widget .view-link {
+    display: inline-block;
+    position: relative;
+    padding: 6px 7px 6px 12px;
+    margin-left: -35px;
+    z-index: 1;
+    vertical-align: middle;
+    -webkit-border-radius: 0 7px 7px 0;
+    -moz-border-radius: 0 7px 7px 0;
+    border-radius: 0 7px 7px 0;
+    -webkit-transition: margin-left 0.2s;
+    -moz-transition: margin-left 0.2s;
+    -ms-transition: margin-left 0.2s;
+    -o-transition: margin-left 0.2s;
+    transition: margin-left 0.2s;
+}
+
+.file-widget .view-link:before {
+    content: '';
+    display: inline-block;
+    width: 16px;
+    height: 14px;
+    vertical-align: top;
+    background: url(../img/eye.svg) no-repeat center;
+}
+
+.file-widget.has-value .view-link {
+    margin-left: -7px;
+}
