--- a/src/libs/stdimage/templates/stdimage/admin/widget.html
+++ b/src/libs/stdimage/templates/stdimage/admin/widget.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="button-wrapper">
-    <button type="button" class="btn btn-success">
+    <button type="button" class="btn btn-small btn-success">
       <i class="icon-folder-open icon-white"></i>
       {% trans 'Select file' %}
     </button>
