--- a/src/libs/file_field/static/file_field/admin/css/file_widget.css
+++ b/src/libs/file_field/static/file_field/admin/css/file_widget.css
@@ -2,15 +2,6 @@
     white-space: nowrap;
 }
 
-.file-widget label {
-    display: inline-block;
-    position: relative;
-    overflow: hidden;
-    z-index: 2;
-    cursor: pointer;
-    vertical-align: middle;
-}
-
 .file-widget input {
     position: absolute;
     left: -100%;
@@ -20,15 +11,24 @@
     visibility: hidden;
 }
 
+.file-widget .btn {
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    z-index: 2;
+    cursor: pointer;
+    vertical-align: middle;
+}
+
 .file-widget .btn i {
     margin-left: -4px;
     margin-right: 2px;
 }
 
-.file-widget .view-link {
+.file-widget .preview {
     display: inline-block;
     position: relative;
-    padding: 6px 7px 6px 12px;
+    padding: 5px 7px 5px 12px;
     margin-left: -35px;
     z-index: 1;
     vertical-align: middle;
@@ -42,7 +42,7 @@
     transition: margin-left 0.2s;
 }
 
-.file-widget .view-link:before {
+.file-widget .preview:before {
     content: '';
     display: inline-block;
     width: 16px;
@@ -51,6 +51,6 @@
     background: url(../img/eye.svg) no-repeat center;
 }
 
-.file-widget.has-value .view-link {
+.file-widget.has-value .preview {
     margin-left: -7px;
 }
