--- a/src/static/admin/scss/admin_fixes.scss
+++ b/src/static/admin/scss/admin_fixes.scss
@@ -262,6 +262,7 @@ td, th {
 // блок фильтров
 .search-filters {
   display: inline-block;
+  margin-right: 6px;
 }
 
 // увеличение стандартного поля M2M
